# commonplace

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh  shell.nix
cli/: Cargo.toml
cli/src/: main.rs
commonplace_cli/: Cargo.toml
commonplace_cli/src/: main.rs
commonplace_gui/: Cargo.toml
commonplace_gui/src/: main.rs
commonplace_gui/src/static/: index.html  style.css
commonplace_gui_client/: Cargo.toml  Makefile.toml
commonplace_gui_client/src/: lib.rs
commonplace_gui_client/static/: index.html  slate_shim.js  style.css
commonplace_gui_server/: Cargo.toml
commonplace_gui_server/src/: main.rs
fuse/: Cargo.toml
fuse/src/: inode_map.rs  main.rs
gui_client/: Cargo.toml  Makefile.toml
gui_client/src/: lib.rs
gui_client/static/: slate_shim.js
gui_server/: Cargo.toml
gui_server/src/: main.rs
libcommonplace/: Cargo.toml
libcommonplace/src/: lib.rs  setup.sql
libcommonplace/types/: Cargo.toml
libcommonplace/types/src/: lib.rs
src/: main.rs  setup.sql
static/: client_shim.js  index.html  slate_shim.js  style.css
