[package]
name = "commonplace_gui_client"
version = "0.0.0"
authors = ["Wesley Aptekar-Cassels <me@wesleyac.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libcommonplace_types = { path = "../libcommonplace/types" }
js-sys = "0.3.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.14"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
hex = "0.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'DomTokenList',
  'Element',
  'EventTarget',
  'HtmlElement',
  'HtmlCollection',
  'Node',
  'NodeList',
  'Headers',
  'ReadableStream',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console',
]
