[package]
name = "commonplace_gui_server"
version = "0.0.0"
authors = ["Wesley Aptekar-Cassels <me@wesleyac.com>"]
edition = "2018"

[dependencies]
rouille = "3.0.0"
rust-embed = "5.6.0"
libcommonplace = { path = "../libcommonplace" }
serde_json = "1.0"
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
rusqlite = { version = "0.24.1", features = [ "bundled", "uuid" ] }
