[package]
version = "0.0.0"
name = "commonplace_gui_client"
authors = ["Wesley Aptekar-Cassels <me@wesleyac.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.8.0"
libcommonplace_types = { path = "../libcommonplace/types/" }
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
serde = "1.0"
serde_json = "1.0"
enclose = "1.1.8"
hex = "0.4.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
