[package]
name = "libcommonplace"
version = "0.0.0"
authors = ["Wesley Aptekar-Cassels <me@wesleyac.com>"]
edition = "2018"

[dependencies]
rusqlite = { version = "0.24.1", features = [ "bundled", "uuid" ] }
blake3 = "0.3.7"
hex = "0.4.2"
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
